2006-06-16  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ various: small fixes from mailist.

2006-06-16  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/breathing-sign.cc (offset_callback): idem.

	* lily/align-interface.cc (align_to_fixed_distance): remove
	hungarian suffix.

	* lily/beaming-pattern.cc (count_factor_twos): oops. We want to
	x%2==0.

2006-06-15  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): release 2.9.9

	* ly/lilypond-book-preamble.ly: add \version

2006-06-14  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/lilypond-book.py (PREAMBLE_LY): include
	lilypond-book-preamble.ly

	* lily/stem.cc (get_beaming): return max of 0 and
	scm_ilength. Fixes slurring from/to beams.

	* ly/lilypond-book-preamble.ly: new file.

	* lily/slur.cc: add inspect-index feature.

2006-06-13  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/tutorial.itely: trivial fix.

2006-06-13  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/parser.yy, scm/ly-syntax-constructors.scm: Produce almost
	all non-event music in the parser via MAKE_SYNTAX.

	* lily/parser-scheme.cc: Add ly:parser-error function

	* scm/paper.scm: fix typo

2006-06-13  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* THANKS: add RT.

	* lily/font-config.cc (init_fontconfig): add warning if cache_file
	is null.

	* buildscripts/output-distance.py (test_compare_signatures):
	timing routines.
	(read_signature_file): use new signature format.

	* scm/stencil.scm (write-system-signature): simpler signature
	format.

	* lily/stem.cc (calc_stem_end_position): calc quantized-positions
	for beamed case. 

	* lily/note-spacing.cc (stem_dir_correction): don't inspect
	stem_end_position, but estimate instead. 

	* lily/tuplet-bracket.cc (calc_positions): look at
	stem-end-position for tuplet bracket slope. Fixes sloped tuplet
	brackets narrower than beams. 

	* lily/lexer.ll: set version-seen? even if version is
	INVALID. 
