@@ -1,6 +1,6 @@
 PACKAGE_NAME=LilyPond
 MAJOR_VERSION=2
 MINOR_VERSION=9
-PATCH_LEVEL=9
+PATCH_LEVEL=10
 MY_PATCH_LEVEL=
 
