@@ -1,0 +1,16 @@
+\header {
+
+  texidoc = "For whole notes, the inside ties do not cross the center
+  of the note head, horizontally. "
+
+  
+  }
+\version "2.9.10"
+
+\paper { ragged-right =  ##t }
+\relative
+{
+  <f d a>1~
+  <f d a>1~
+  <f d a>1~
+}
